--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
     border-radius: 5px;
 }
 .background{
-    background: rgba(0,0,0,0.6) url('/image/background.jpg') top center/cover;
+    background: rgba(0,0,0,0.6) url('image/background.jpg') top center/cover;
     background-blend-mode: darken;
 }
 .firstsection{
